# azure-functions-doctor-for-python

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  cliff.toml  hatch.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  rules.json  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  general_issue.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml  test.yml
api/: index.html
development/: index.html
diagnostics/: index.html
docs/: api.md  development.md  diagnostics.md  handlers.md  index.md  release_process.md  roadmap.md  rules.md  usage.md
examples/: README.md
examples/basic-hello/: README.md  function_app.py  requirements.txt
examples/v1/HttpExample/: README.md
examples/v1/basic-hello/: README.md  requirements.txt
examples/v1/basic-hello/HttpExample/: __init__.py  function.json
examples/v1/http-trigger/: README.md
examples/v1/http-trigger/http_trigger_function/: __init__.py
examples/v1/multi-trigger/: README.md
examples/v1/multi-trigger/http_trigger_function/: __init__.py
examples/v1/multi-trigger/queue_trigger_function/: __init__.py  function.json
examples/v1/multi-trigger/timer_trigger_function/: __init__.py  function.json
examples/v2/basic-hello/: README.md  function_app.py  requirements.txt
examples/v2/http-trigger/: README.md
examples/v2/multi-trigger/: .gitignore  README.md  function_app.py  requirements.txt
handlers/: index.html
release_process/: index.html
roadmap/: index.html
rules/: index.html
scripts/: clean-all-win.bat  clean-win.bat
search/: search_index.json
src/azure_function_doctor/: __init__.py  cli.py
src/azure_functions_doctor/: __init__.py  api.py  check.py  cli.py  config.py  doctor.py  handlers.py  logging_config.py  registry.py  result.py  rules.json  target_resolver.py  utils.py
src/azure_functions_doctor/assets/: rules.json
src/azure_functions_doctor/assets/rules/: v1.json  v2.json
src/azure_functions_doctor/checks/: config_files.py  python_env.py
src/azure_functions_doctor/schemas/: rules.schema.json
tests/: test_api.py  test_check.py  test_cli.py  test_config.py  test_doctor.py  test_error_handling.py  test_handler.py  test_handler_registry.py  test_programming_model_detection.py  test_rule_loading.py  test_target_resolver.py  test_utils.py  test_v1_project_handling.py
usage/: index.html
